[project]
name = "uv-valis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0.1",
    "imagecodecs>=2024.12.30",
    "ipykernel>=6.29.5",
    "numpy==1.26.4",
    "pydantic>=2.10.6",
    "pytesseract>=0.3.13",
    "rasterio>=1.4.3",
    "valis-wsi==1.1.0",
    "zarr>=2.18.3",
]
